fix(mainComponent): fix z-index

--- a/PWAConverter/Client/src/app/components/sidebar/sidebar.component.css
+++ b/PWAConverter/Client/src/app/components/sidebar/sidebar.component.css
@@ -5,6 +5,7 @@
   left: 0;
   height: 100%;
   width: 260px;
+  z-index: 10;
   background: var(--surface-0);
   border-right: 1px solid var(--surface-200);
   transition: all 0.5s ease;
